[package]
name = "schluesselwert"
version = "0.1.0"
authors = ["Bastian Köcher <git@kchr.de>"]

[dependencies]
raft = "0.3.1"
rocksdb = "0.10.1"
tokio = "0.1.7"
failure = "0.1.1"
byteorder = "1.2.3"
protobuf = "2.0.4"
bincode = "1.0.1"
serde_derive = "1.0.70"
serde = "1.0.70"
futures = "0.1"
bytes = "0.4.9"
tokio-io = "0.1.7"
rand = "0.5.4"

[dev-dependencies]
tempdir = "0.3.7"
criterion = "0.2"

[[bench]]
name = "bench_kv"
harness = false